# stlink-tool

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build-wdi-simple.yml  ci.yml  release.yml
docs/superpowers/specs/: 2026-05-05-stlink-tool-design.md
resources/: zadig.ini
src/: app.rs  bundle.rs  device.rs  driver_fix.rs  error.rs  flasher.rs  main.rs  watcher.rs
