[package]
name = "stlink-tool"
version = "0.1.0"
edition = "2021"
authors = ["Zhang Yilin"]
description = "Drag-and-drop STM32F10x flasher with self-healing ST-Link WinUSB driver on Windows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zincs-anna/stlink-tool"
readme = "README.md"

[[bin]]
name = "stlink-tool"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.34"
egui_extras = "0.34"
nusb = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "macros", "sync", "time", "fs"] }
notify = "8"
sha2 = "0.10"
zip = { version = "8", default-features = false, features = ["deflate"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Com",
] }

[build-dependencies]
embed-manifest = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
